# siv6

./: .gitignore  README.md  ThirdParty.md
.github/workflows/: TrackUpstream.yml  ccpp.yml  ccpp_web.yml  ci.yml
Linux/: CMakeLists.txt  Main.cpp
Linux/App/: CMakeLists.txt  Main.cpp
Siv3D/: ThirdParty.md  TthirdParty.md
Siv3D/include/: Siv3D.hpp
Siv3D/include/Siv3D/: Addon.hpp  Allocator.hpp  ApplicationOptions.hpp  Array.hpp  AssetHandle.hpp  AssetID.hpp  AssetIDWrapper.hpp  AsyncTask.hpp  BigFloat.hpp  BigInt.hpp  BinaryReader.hpp  BinaryWriter.hpp  BlendState.hpp  Blob.hpp  Byte.hpp  CPUInfo.hpp  Char.hpp  Char.ipp  Color.hpp  ColorF.hpp  Common.hpp  CommonFloat.hpp  Concepts.hpp  ConcurrentTask.hpp  Console.hpp  ConstantBuffer.hpp  Cursor.hpp  DLL.hpp  Date.hpp  DateTime.hpp  Demangle.hpp  DiscreteDistribution.hpp  Distribution.hpp  Duration.hpp  Easing.hpp  Endian.hpp  Endian.ipp  EngineLog.hpp  EngineLog.ipp  EnvironmentVariable.hpp  (+123 more)
Siv3D/include/Siv3D/ImageFormat/: BMPEncoder.hpp  PNGEncoder.hpp
Siv3D/include/Siv3D/Windows/: Libraries.hpp  Windows.hpp
Siv3D/include/Siv3D/detail/: ApplicationOptions.ipp  Array.ipp  AssetHandle.ipp  AssetID.ipp  BigFloat.ipp  BigInt.ipp  BinaryReader.ipp  BinaryWriter.ipp  Blob.ipp  BoolArray.ipp  Byte.ipp  Color.ipp  ColorF.ipp  ConcurrentTask.ipp  ConstantBuffer.ipp  Date.ipp  DateTime.ipp  Demangle.ipp  Distribution.ipp  EngineLog.ipp  FastMath.ipp  FormatInt.ipp  FormatLiteral.ipp  FormatUtility.ipp  Grid.ipp  HSV.ipp  Hash.ipp  INIData.ipp  IReader.ipp  ISteadyClock.ipp  IWriter.ipp  Image.ipp  KahanSummation.ipp  Mat3x2.ipp  Math.ipp  Memory.ipp  MicrosecClock.ipp  MillisecClock.ipp  Optional.ipp  Optional_misc.ipp  (+23 more)
Siv3D/src/Siv3D-Platform/Linux/: Siv3DMain.cpp
Siv3D/src/Siv3D-Platform/Linux/Cursor/: CCursor.cpp  CCursor.hpp
Siv3D/src/Siv3D-Platform/Linux/FileSystem/: FileSystem_Platform.cpp
Siv3D/src/Siv3D-Platform/Linux/Renderer/: RendererFactory.cpp
Siv3D/src/Siv3D-Platform/Linux/Renderer2D/: Renderer2DFactory.cpp
Siv3D/src/Siv3D-Platform/Linux/Siv3D/: Siv3DMain.cpp
Siv3D/src/Siv3D-Platform/WindowsDesktop/: Siv3DMain.cpp
Siv3D/src/Siv3D-Platform/macOS/: Siv3DMain.cpp
Siv3D/src/Siv3D/ApplicationOptions/: SivApplicationOptions.cpp
Siv3D/src/Siv3D/BigFloat/: SivBigFloat.cpp
Siv3D/src/Siv3D/BigInt/: SivBigInt.cpp
Siv3D/src/Siv3D/BinaryReader/: SivBinaryReader.cpp
Siv3D/src/Siv3D/Byte/: SivByte.cpp
Siv3D/src/Siv3D/CPUInfo/: SivCPUInfo.cpp
Siv3D/src/Siv3D/ColorF/: SivColorF.cpp
Siv3D/src/Siv3D/Common/: ApplicationOptions.cpp  ApplicationOptions.hpp  Siv3DEngine.cpp  Siv3DEngine.hpp
Siv3D/src/Siv3D/Console/: ConsoleFactory.cpp  IConsole.hpp  SivConsole.cpp
Siv3D/src/Siv3D/Cursor/: CCursor_Null.cpp  CCursor_Null.hpp  CursorFactory.cpp  CursorState.hpp  ICursor.hpp  SivCursor.cpp
Siv3D/src/Siv3D/DateTime/: SivDateTime.cpp
Siv3D/src/Siv3D/Dummy/: CDummy.cpp  CDummy.hpp  DummyFactory.cpp  IDummy.hpp
Siv3D/src/Siv3D/Duration/: SivDuration.cpp
Siv3D/src/Siv3D/EngineLog/: SivEngineLog.cpp
Siv3D/src/Siv3D/Error/: SivError.cpp
Siv3D/src/Siv3D/FileSystem/: SivFileSystem.cpp
Siv3D/src/Siv3D/Format/: SivFormat.cpp
Siv3D/src/Siv3D/FormatFloat/: SivFormatFloat.cpp
Siv3D/src/Siv3D/FormatInt/: SivFormatInt.cpp
Siv3D/src/Siv3D/FormatUtility/: SivFormatUtility.cpp
Siv3D/src/Siv3D/Formatter/: SivFormatter.cpp
Siv3D/src/Siv3D/INIData/: SivINIData.cpp
Siv3D/src/Siv3D/Image/: SivImage.cpp
Siv3D/src/Siv3D/ImageDecoder/: CImageDecoder.cpp  CImageDecoder.hpp  IImageDecoder.hpp  SivImageDecoder.cpp
Siv3D/src/Siv3D/ImageEncoder/: CImageEncoder.cpp  CImageEncoder.hpp  IImageEncoder.hpp  SivImageEncoder.cpp
Siv3D/src/Siv3D/ImageFormat/: BMPDecoder.cpp  BMPEncoder.cpp  PNGDecoder.cpp  PNGEncoder.cpp  SVGDecoder.cpp
Siv3D/src/Siv3D/IntFormatter/: SivIntFormatter.cpp
Siv3D/src/Siv3D/Interpolation/: SivInterpolation.cpp
Siv3D/src/Siv3D/LicenseManager/: CLicenseManager.cpp  LicenseList.hpp  SivLicenseManager.cpp
Siv3D/src/Siv3D/Logger/: ILogger.hpp  LoggerFactory.cpp  SivLogger.cpp
Siv3D/src/Siv3D/ParseBool/: SivParseBool.cpp
Siv3D/src/Siv3D/ParseFloat/: SivParseFloat.cpp
Siv3D/src/Siv3D/ParseInt/: SivParseInt.cpp
Siv3D/src/Siv3D/PixelShader/: SivPixelShader.cpp
Siv3D/src/Siv3D/Point/: SivPoint.cpp
Siv3D/src/Siv3D/Profiler/: CProfiler.cpp  IProfiler.hpp
Siv3D/src/Siv3D/QR/: SivQR.cpp
Siv3D/src/Siv3D/Rectangle/: SivRectangle.cpp
Siv3D/src/Siv3D/RegExp/: RegExpDetail.cpp
Siv3D/src/Siv3D/Renderer/: IRenderer.hpp
Siv3D/src/Siv3D/Renderer2D/: IRenderer2D.hpp
Siv3D/src/Siv3D/Resource/: IResource.hpp  SivResource.cpp
Siv3D/src/Siv3D/Scene/: CScene.cpp  CScene.hpp  IScene.hpp  SivScene.cpp
Siv3D/src/Siv3D/Shader/: IShader.hpp
Siv3D/src/Siv3D/String/: Levenshtein.cpp  SivString.cpp
Siv3D/src/Siv3D/StringView/: SivStringView.cpp
Siv3D/src/Siv3D/System/: ISystem.hpp  SivSystem.cpp  SystemFactory.cpp  SystemLog.cpp
Siv3D/src/Siv3D/TextReader/: SivTextReader.cpp  TextReaderDetail.cpp  TextReaderDetail.hpp
Siv3D/src/Siv3D/Texture/: SivTexture.cpp
Siv3D/src/Siv3D/Unicode/: SivUnicode.cpp  UnicodeUtility.cpp  UnicodeUtility.hpp
Siv3D/src/Siv3D/UnicodeConverter/: SivUnicodeConverter.cpp
Siv3D/src/Siv3D/UserAction/: CUserAction.cpp  IUserAction.hpp
Siv3D/src/Siv3D/Vector2D/: SivVector2D.cpp
Siv3D/src/Siv3D/VertexShader/: SivVertexShader.cpp
Siv3D/src/Siv3D/Window/: IWindow.hpp  SivWindow.cpp  WindowFactory.cpp
Siv3D/src/Test/: Siv3DTest.cpp
Test/: Siv3DTest.cpp  Siv3DTest.js  Siv3DTest_Array.cpp  Siv3DTest_BinaryReader.cpp  Siv3DTest_BinaryWriter.cpp  Siv3DTest_FileSystem.cpp  Siv3DTest_Image.cpp  Siv3DTest_Resource.cpp  Siv3DTest_TextEncoding.cpp  Siv3DTest_TextReader.cpp  Siv3DTest_TextWriter.cpp
Web/: CMakeLists.txt  Main.cpp
Web/App/: CMakeLists.txt  Main.cpp  TestMain.cpp
Web/App/resources/engine/shader/glsl/: test.vert
WindowsDesktop/: Main.cpp  Siv3D-Test.vcxproj  Siv3D-Test.vcxproj.filters  Siv3D.vcxproj  Siv3D.vcxproj.filters
WindowsDesktop/App/: Resource.rc
macOS/: Main.cpp
macOS/OpenSiv3D.xcodeproj/: project.pbxproj
(+221 files in other folders)
